DEVOPS-483: Add LICENSE.TXT for distribution conformance.
DEVOPS-483 (Add LICENSE.txt files to binary builds of all our plug-ins)

--- a/org.knime.dynamic.js.base/build.properties
+++ b/org.knime.dynamic.js.base/build.properties
@@ -2,5 +2,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                org-knime-dynamic-js-base.jar,\
-               nodes/
+               nodes/,\
+               LICENSE.TXT
 source.org-knime-dynamic-js-base.jar = src/
+src.includes = LICENSE.TXT
