--- a/org.knime.dynamic.js/build.properties
+++ b/org.knime.dynamic.js/build.properties
@@ -4,7 +4,9 @@ bin.includes = META-INF/,\
                lib/,\
                dynamicJSNode_v2.12.xsd,\
                src-js/,\
-               dynamicJSNode_v3.0.xsd
+               dynamicJSNode_v3.0.xsd,\
+               LICENSE.TXT
 source.knime-dynamic-js-node-generation.jar = src/eclipse/
 output.knime-dynamic-js-node-generation.jar = bin/eclipse/
 jars.extra.classpath = lib/schemas.jar
+src.includes = LICENSE.TXT
