--- a/org.knime.dynamic.node.generation/build.properties
+++ b/org.knime.dynamic.node.generation/build.properties
@@ -4,9 +4,11 @@ bin.includes = META-INF/,\
                plugin.xml,\
                schema/,\
                dynamicNode_v2.12.xsd,\
-               dynamicNode_v3.0.xsd
+               dynamicNode_v3.0.xsd,\
+               LICENSE.TXT
 jars.compile.order = knime-dynamic-node-generation.jar
 source.knime-dynamic-node-generation.jar = src/eclipse/
 output.knime-dynamic-node-generation.jar = bin/
 jars.extra.classpath = lib/schemas.jar
 source.knime-dynamic-node-generation.jar = src/eclipse/
+src.includes = LICENSE.TXT
