--- a/org.knime.ext.js/build.properties
+++ b/org.knime.ext.js/build.properties
@@ -2,5 +2,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                js-src/,\
                js-lib/,\
-               ext-js.jar
+               ext-js.jar,\
+               LICENSE.TXT
 source.ext-js.jar = src/
+src.includes = LICENSE.TXT
