--- a/org.knime.js.quickforms/build.properties
+++ b/org.knime.js.quickforms/build.properties
@@ -2,5 +2,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                js-src/,\
-               js-quickforms.jar
+               js-quickforms.jar,\
+               LICENSE.txt
 source.js-quickforms.jar = src/
+src.includes = LICENSE.txt
