--- a/org.knime.js.tests/build.properties
+++ b/org.knime.js.tests/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               js-src/
+               js-src/,\
+               LICENSE.TXT
+src.includes = LICENSE.TXT
