--- a/org.knime.quickform.nodes.legacy/build.properties
+++ b/org.knime.quickform.nodes.legacy/build.properties
@@ -1,6 +1,8 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                .,\
-               icons/
+               icons/,\
+               LICENSE.TXT
 source.. = src/
 output.. = bin/
+src.includes = LICENSE.TXT
