--- a/org.knime.ext.js/plugin.xml
+++ b/org.knime.ext.js/plugin.xml
@@ -7,6 +7,10 @@
             category-path="/flowabstraction/quickforms/input"
             factory-class="org.knime.ext.js.node.quickform.input.molecule.MoleculeStringInputQuickFormNodeFactory">
       </node>
+      <node
+            category-path="/flowabstraction/widegets/input"
+            factory-class="org.knime.ext.js.node.widget.input.molecule.MoleculeWidgetNodeFactory">
+      </node>
    </extension>
    <extension
          point="org.knime.js.core.webResources">
